--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!doctypehtml>
 <html>
+  <style>
+    body {
+background: red;
+    }
+  </style>
 <body>
   <h1>your current social credits</h1>
   <h3 id="main"></h3>
