--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@ background: red;
     }
   </style>
 <body>
+  <imgPos1>
   <h1>your current social credits</h1>
   <h3 id="main"></h3>
+  </imgPos1>
   <script>
     var creds = 100;
     document.getElementById("main").innerHTML = creds;
