--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ background: #FF6464;
     }
   </style>
 <body>
+  <link rel="stylesheet" href="style.css">
   <imgPos1>
   <h1>your current social credits</h1>
   <h3 id="main"></h3>
