--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ background: #FF6464;
   </style>
 <body>
   <link rel="stylesheet" href="style.css">
-  <imgPos1>
+  <set1>
   <h1>your current social credits</h1>
   <h3 id="main"></h3>
-  </imgPos1>
+  </set1>
   <script>
     var creds = 100;
     document.getElementById("main").innerHTML = creds;
