--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@ background: #FF6464;
   <link rel="stylesheet" href="style.css">
   <set1>
   <h1>your current social credits</h1>
-  <h3 id="main"></h3>
   </set1>
+  <set2>
+  <h3 id="main"></h3>
+  </set2>
   <script>
     var creds = 100;
     document.getElementById("main").innerHTML = creds;
