--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ background: #FF6464;
   <set2>
   <h3 id="main"></h3>
   </set2>
+  <set3>
   <a href="https://ibb.co/1mdq9C3"><img src="https://i.ibb.co/tJxsb0S/IMG-0081.jpg" alt="IMG-0081" border="0"></a>
+  </set3>
   <script>
     var creds = 100;
     document.getElementById("main").innerHTML = creds;
